# ComfyUI-nunchaku

./: .gitignore  .pre-commit-config.yaml  README.md  README_ZH.md  __init__.py  model_patcher.py  pyproject.toml  requirements.txt  utils.py
.github/: pull_request_template.md
.github/workflows/: build-comfyui-desktop.yaml  build_comfyui_desktop.cmd  pr-test.yaml  publish.yaml  test-ampere.yaml  test-blackwell.yaml  test_ampere.yaml  test_blackwell.yaml  update-cdn.yml
docs/source/: conf.py  index.rst  links.rst
docs/source/api/: ComfyUI-nunchaku.rst  mixins.model.rst  model_base.qwenimage.rst  model_configs.qwenimage.rst  model_configs.rst  models.qwenimage.rst  modules.rst  nodes.lora.flux.rst  nodes.lora.rst  nodes.models.flux.rst  nodes.models.ipadapter.rst  nodes.models.pulid.rst  nodes.models.rst  nodes.models.text_encoder.rst  nodes.models.utils.rst  nodes.preprocessors.depth.rst  nodes.preprocessors.rst  nodes.rst  nodes.tools.installers.rst  nodes.tools.merge_safetensors.rst  nodes.tools.rst  tests.rst  tests.test_legacy_workflows.rst  tests.test_workflows.rst  utils.rst  wrappers.flux.rst  wrappers.rst
docs/source/developer/: build_comfyui_desktop.rst  build_desktop_exe.rst  build_docs.rst  contribution_guide.rst  docstring.rst
docs/source/get_started/: installation.rst  usage.rst
docs/source/links/: blog.txt  github.txt  huggingface.txt  misc.txt  modelscope.txt  paper.txt
docs/source/nodes/: diffusion_model.rst  flux.rst  ipadapter.rst  lora.rst  models.rst  preprocessors.rst  pulid.rst  radial_attention.rst  text_encoder.rst  toc.rst  tools.rst
docs/source/workflows/: canny.rst  control.rst  controlnet.rst  depth.rst  fill.rst  flux1.rst  ipadapter.rst  kontext.rst  pulid.rst  redux.rst  t2i.rst  toc.rst  tools.rst  workflows.rst
example_workflows/: install_wheel.json  merge_models_into_a_single_file.json  merge_safetensors.json  nunchaku-flux.1-IP-adapter-dev.json  nunchaku-flux.1-dev-controlnet-union-pro2.json  nunchaku-flux.1-dev-pulid.json  nunchaku-flux.1-redux-dev.json  nunchaku-qwen-image-edit-lora.json  nunchaku-qwen-image.json  wan_2.1_i2v_14B.json
mixins/: model.py
model_base/: qwenimage.py
model_configs/: qwenimage.py
models/: qwenimage.py  sdxl.py  transformer_flux_piflow.py
nodes/: utils.py
nodes/lora/: flux.py  qwenimage.py
nodes/models/: __init__.py  flux.py  flux_piflow.py  ipadapter.py  pulid.py  pulid_flux_pipeline.py  qwenimage.py  sdxl.py  text_encoder.py  utils.py
nodes/models/pulid_utils/: face_restoration_helper.py
nodes/preprocessors/: depth.py
nodes/radial_attn/: __init__.py  nodes.py  radial_attn_core.py
nodes/radial_attn/example_workflows/: wan_2.1_i2v_14B.json
nodes/tools/: __init__.py  installers.py  merge_models.py  merge_safetensors.py  nunchaku_versions.json
nunchaku_code/: lora_qwen.py
pypi/: nunchaku_index.html
scripts/: README.md  build_comfyui_desktop.cmd  download_inputs.py  download_models.py  download_test_data.py  setup_custom_nodes.py  update_versions.py
supported_models/: qwenimage.py
supported_models.py/: qwenimage.py
test_data/: images.yaml  inputs.yaml  loras.yaml  models.yaml  nunchaku_models.yaml
tests/: case.py  common.py  example.py  requirements.txt  test.py  test_legacy_workflows.py  test_nunchaku-flux.1-dev.py  test_workflows.py  utils.py
tests/nunchaku-flux.1-canny/: api.json  test.py  test_cases.json
tests/nunchaku-flux.1-canny-lora/: api.json  test_cases.json
tests/nunchaku-flux.1-depth/: test_cases.json
tests/nunchaku-flux.1-depth-lora/: test_cases.json
tests/scripts/: nunchaku-flux1-IP-adapter.py  nunchaku_flux1_canny.py  nunchaku_flux1_canny_lora.py  nunchaku_flux1_depth.py  nunchaku_flux1_depth_lora.py  nunchaku_flux1_dev.py  nunchaku_flux1_dev_controlnet_union_pro2.py  nunchaku_flux1_dev_controlnet_upscaler.py  nunchaku_flux1_fill.py  nunchaku_flux1_redux_dev.py  nunchaku_flux1_schnell.py  nunchaku_flux1_shuttle_jaguar.py
tests/tests_new/: .gitignore  test_nunchaku_workflows.py  tests_README.md
tests/tests_new/workflows_api/: flux.1-dev-nunchaku-api.json  nunchaku-qwen-image-api.json  nunchaku-qwen-image-edit-api.json
tests/v1/: test_nunchaku_workflows.py
tests/workflows/fix-qwen-image-with-res4lyf-sampler/: api.json  ref.json  test_cases.json  workflow.json
tests/workflows/nunchaku-flux.1-canny/: test_cases.json
tests/workflows/nunchaku-flux.1-canny-lora/: test_cases.json
tests/workflows/nunchaku-flux.1-depth/: test_cases.json
tests/workflows/nunchaku-flux.1-depth-lora/: test_cases.json
tests/workflows/nunchaku-flux.1-dev/: test_cases.json
tests/workflows/nunchaku-flux.1-dev-controlnet-union-pro2/: api.json  test_cases.json
tests/workflows/nunchaku-flux.1-dev-controlnet-upscaler/: api.json  test_cases.json
tests/workflows/nunchaku-flux.1-dev-hand_drawn_game/: api.json  ref.json  test_cases.json
tests/workflows/nunchaku-flux.1-dev-pulid/: test_cases.json
tests/workflows/nunchaku-flux.1-dev-qencoder/: test_cases.json
tests/workflows/nunchaku-flux.1-fill/: api.json  ref.json  test_cases.json
tests/workflows/nunchaku-flux.1-fill-removalV2/: api.json  ref.json  test_cases.json
tests/workflows/nunchaku-flux.1-kontext-dev/: test_cases.json
tests/workflows/nunchaku-flux.1-kontext-dev-turbo_lora/: api.json  ref.json  test_cases.json
tests/workflows/nunchaku-flux.1-redux-dev/: test_cases.json
tests/workflows/nunchaku-flux.1-schnell/: test_cases.json
tests/workflows/nunchaku-qwen-image/: test_cases.json
tests/workflows/nunchaku-qwen-image-edit/: test_cases.json
tests/workflows/nunchaku-qwen-image-edit-2509/: test_cases.json
tests/workflows/nunchaku-qwen-image-res4lyf/: test_cases.json
wrappers/: flux.py  flux_piflow.py  qwenimage.py
